Bug 1439468 - Improve error reporting in Safe Browsing protocol parser. r=gcp

MozReview-Commit-ID: JeyCZSbdZBd